# py-tree-sitter-type-provider

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/actions/setup-python/: action.yml
.github/workflows/: build.yml  ci.yml  publish.yml  release.yml
src/tree_sitter_type_provider/: __init__.py  node_types.py  parse_error.py
test/: test_api.py  test_convert.py  test_stubtest_talon.py  test_type_provider.py
test/data/tree-sitter-talon/: binding.gyp  grammar.js
test/data/tree-sitter-talon/bindings/node/: index.js
test/data/tree-sitter-talon/src/: grammar.json  scanner.cc
test/golden/: javascript.yml  talon.yml
test/golden/api/: javascript.yml  talon.yml
test/golden/convert/: talon.yml
test/talon/: __init__.py
tests/: __init__.py  test_api.py  test_convert.py  tree_sitter_talon.lib
tests/data/golden/api/: javascript.py312.yml  javascript.py37.yml  javascript.py39.yml  javascript.yml  javascript_with_error.yml  talon.py311.yml  talon.py37.yml  talon.py38.yml  talon.yml  talon_with_error.yml
tests/data/golden/convert/: talon.yml  talon_with_error.yml
tests/data/node-types/: javascript.json  talon.json
tests/data/tree-sitter-talon/: grammar.js
tree_sitter_type_provider/: __init__.py  node_types.py  parse_error.py
