[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tree_sitter_type_provider"
version = "2.1.18"
description = "Type providers for tree-sitter in Python."
license = "MIT"
authors = ["Wen Kokke <wenkokke@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/wenkokke/py-tree-sitter-type-provider"
keywords = ["parser", "tree-sitter", "type-provider"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
tree-sitter = "^0.20.0"
dataclasses-json = "^0.5.7"
bumpver = { version = "*", optional = true }
pytest = { version = "^7.1.2", optional = true }
pytest-golden = { version = "^0.2.2", optional = true }

[tool.poetry.extras]
test = ["bumpver", "pytest", "pytest-golden"]

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
tox = "^3.25.1"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
bumpver = "*"

[tool.poetry.group.ci.dependencies]
tox = "^3.25.1"
tox-gh-actions = "^2.10.0"

# MyPy
[tool.mypy]
python_version = 3.7
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

# Versions
[tool.bumpver]
current_version = "2.1.18"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']

# Tests
[tool.pytest.ini_options]
enable_assertion_pass_hook = true
filterwarnings = ["ignore::DeprecationWarning:.*:"]
testpaths = "tests"

[tool.tox]
legacy_tox_ini = """
[tox]
requires =
  tox-poetry
envlist = py37,py38,py39,py310
isolated_build = True

[gh-actions]
python =
  3.7: py37
  3.8: py38
  3.9: py39
  3.10: py310

[testenv]
extras =
  test
commands =
  bumpver update --patch --dry --no-fetch
  pytest tests/
"""
